refactor(attribute): optimize repository queries and apply DRY DTO mapping
- Replace verbose derived query methods with dynamic JPQL @Query
- Add static factory methods (fromView, fromEntity, of) to DTOs and Entity
- Streamline AttributeServiceImpl stream pipelines using method references and Java 21 .toList()
- Eliminate redundant DB query in findOrCreateAttributeOption for better performance